se creo la app de tickets

--- a/menu/templates/dashboard.html
+++ b/menu/templates/dashboard.html
@@ -93,8 +93,8 @@
                                 <i class="fas fa-users"></i><span class="ms-1 d-none d-sm-inline">Clientes</span> </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link px-0 align-middle">
-							<i class="fas fa-ticket-alt"></i><span class="ms-1 d-none d-sm-inline">Tickets</span> </a>
+                            <a href="{% url 'tickets' %}" class="nav-link px-0 align-middle text-decoration-none">
+                                <i class="fas fa-headset"></i><span class="ms-1 d-none d-sm-inline">Tickets</span> </a>
                         </li>
                         <li>
                             <a href="#" class="nav-link px-0 align-middle">
