se agrego el modelo de tickets

--- a/tickets/templates/generate_ticket_form.html
+++ b/tickets/templates/generate_ticket_form.html
@@ -1,6 +1,6 @@
 {% extends "dashboard.html" %}
 {% load static %}
-{% block title %} Info del ticket {% endblock %}
+{% block title %} Generar nuevo ticket {% endblock %}
 
 {% block extra_styles %}
     
