--- a/tickets/templates/tickets.html
+++ b/tickets/templates/tickets.html
@@ -1,13 +1,21 @@
 {% extends "dashboard.html" %}
 {% load static %}
-{% block title %} Tickets {% endblock %}
+{% block title %} Gestor de tickets {% endblock %}
 
 {% block extra_styles %}
     
 {% endblock %}
 
 {% block content %}
-    <h3 class="text-center lead"> Panel de generador de tickets <i class="fas fa-ticket-alt"></i></h3>
+
+		<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+			<ul class="breadcrumb">
+				<li class="breadcrumb-item"><a class="text-decoration-none link-primary" href="{% url 'dashboard' %}">Menú</a></li>
+				<li class="breadcrumb-item active" aria-current="page"><a href="{% url 'tickets' %}"><span class="badge bg-secondary rounded-pill">Gestor tickets</span></a></li>
+			</ul>
+		</nav>
+
+    <h3 class="text-center lead"> Panel de gestor de tickets <i class="fas fa-ticket-alt"></i></h3>
 
     <div class="d-flex align-items-center justify-content-center py-5" style="gap: 0.9rem;" >
         <div class="p-4 border">
@@ -27,27 +35,46 @@
         </div>
     </div>
 
-    <a class="btn btn-outline-secondary" href="{% url "ticket_info" %}"><i class="fas fa-plus"></i> Crear un nuevo ticket</a>
+    <a class="btn btn-outline-secondary" href="{% url 'generate_ticket' %}"><i class="fas fa-plus"></i> Crear un nuevo ticket</a>
 		<div class="table-responsive py-5">
 			<table class="table table-bordered">
         <thead>
             <tr>
+                <th>Asunto</th>
                 <th>Cliente</th>
-                <th>Cargo</th>
-                <th>Solicitud</th>
+                <th>Asignado a</th>
+                <th>Agente</th>
+                <th>Descripción</th>
                 <th>Prioridad</th>
-                <th>Estado</th>
+                <th>Tipo</th>
+                <th>Canal</th>
+                <th>Fecha</th>
+                <th></th>
             </tr>
         </thead>
             <tbody>
+							{% for ticket in tickets %}
                 <tr>
-                    <td> Andres</td>
-                    <td> DevOps</td>
-                    <td> Alta</td>
-                    <td> Pendiente</td>
+									<td>{{ticket.subject}}</td>
+									<td>{{ticket.customer}}</td>
+									<td>{{ticket.asigned_to}}</td>
+									<td>{{ticket.agent}}</td>
+									<td>{{ticket.description}}</td>
+									{% if ticket.priority == "NORMAL" %}
+											<td><span class="badge rounded-pill bg-success">{{ticket.priority}}</span></td>
+									{% elif ticket.priority == "MEDIANA" %}
+											<td><span class="badge rounded-pill bg-warning">{{ ticket.priority }}</span></td>
+									{% elif ticket.priority == "ALTA" %}
+											<td><span class="badge rounded-pill bg-danger">{{ ticket.priority }}</span></td>
+									{% endif %}
+									<td>{{ticket.ticket_type}}</td>
+									<td>{{ticket.chanel}}</td>
+									<td>{{ticket.created_at}}</td>
+									<td><i class="fas fa-bars justify-content-center"></i></td>
                 </tr>
+							{% endfor %}
             </tbody>
-    </table>
+      </table>
 		</div>
 
     {% block child_js_below_files %} 
