--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -7,6 +7,12 @@
 {% endblock %}
 
 {% block content %}
+		<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+			<ul class="breadcrumb">
+				<li class="breadcrumb-item"><a class="text-decoration-none link-primary" href="{% url 'dashboard' %}">Menú</a></li>
+				<li class="breadcrumb-item active" aria-current="page"><a href="{% url 'tasks' %}"><span class="badge bg-secondary rounded-pill">Gestionar tareas</span></a></li>
+			</ul>
+		</nav>
 
     <h3 class="text-center lead"> Gestionar tareas <i class="fas fa-tasks"></i></h3>
     {% if messages %}
