se agrego el form para crear un nuevo ticket

--- a/contacts/templates/contacts.html
+++ b/contacts/templates/contacts.html
@@ -85,7 +85,7 @@
     </div>
 
     <div class="table-responsive justify-content-center">
-        <table id="example" class="table table-hover table-bordered">
+        <table id="example" class="table table-hover table-bordered" style="width: 100%;">
             <thead>
                 <tr>
                     <th scope="col">Cliente</th>
