--- a/tickets/templates/generate_ticket_form.html
+++ b/tickets/templates/generate_ticket_form.html
@@ -17,8 +17,8 @@
     <h3 class="mb-5 text-center lead dispay-5">Formulario de creación de tickets <i class="fas fa-ticket-alt"></i></h3>
 		{% if messages %}
 			{% for message in messages %}
-					<div class="alert alert-success mt-3">
-						{{message}}
+					<div class="alert alert-success mt-3 text-center mb-3">
+						{{message}} <a class="text-decoration-none" href="{% url 'tickets' %}">Clic para ver.</a>
 					</div>
 			{% endfor %}
 		{% endif %}
@@ -28,24 +28,24 @@
 			<div class="row">
 				<div class="col col col-sm-4 ">
 					<div class="form-group">
-							<label class="form-label" for="subject"> Asunto</label>
+							<label class="form-label" for="subject"> Asunto <i class="fas fa-file-signature"></i></label>
 							<input class="form-control g-3" type="text" id="subject" name="subject" required placeholder="Asunto">
 					</div>
 				</div>
 				<div class="col col col-sm-4 ">
 					<div class="form-group">
-						<label class="form-label" for="customer"> Nombre del cliente</label>
+						<label class="form-label" for="customer"> Nombre del cliente <i class="fas fa-users"></i></label>
 						<select class="form-select" name="customer" id="customer">
 							<option value=""></option>
-							{% for ticket in tickets %}
-								<option value="{{ticket.customer}}">{{ticket.customer}}</option>
+							{% for customer in customers %}
+								<option value="{{customer.customer}}">{{customer.customer}}</option>
 							{% endfor %}
 						</select>
 					</div>
 				</div>
 				<div class="col col-sm-4 mb-5">
 					<div class="form-group">
-						<label class="form-label" for="asigned"> Asignar a </label>
+						<label class="form-label" for="asigned"> Asignar a <i class="far fa-building"></i></label>
 						<select class="form-select" name="asigned" id="asigned">
 							<option value=""></option>
 							<option value="Departamento de sistemas">Departamento de sistemas</option>
@@ -58,13 +58,13 @@
 				<div class="row">
 					<div class="col">
 						<div class="form-group">
-							<label class="form-label" for="agent">Agente</label>
+							<label class="form-label" for="agent">Agente <i class="fas fa-headset"></i></label>
 							<input class="form-control" type="text" name="agent" id="agent" placeholder="Agente encargado">
 						</div>
 					</div>
 					<div class="col">
 						<div class="form-group">
-							<label class="form-label" for="priority">Prioridad</label>
+							<label class="form-label" for="priority">Prioridad <i class="fas fa-exclamation-triangle"></i></label>
 							<select class="form-select" name="priority" id="priority">
 								<option value=""></option>
 								<option value="Alta">Alta</option>
@@ -77,7 +77,7 @@
 				<div class="row py-5">
 					<div class="col">
 						<div class="form-group">
-							<label class="form-label" for="description">Descripción</label>
+							<label class="form-label" for="description">Descripción <i class="far fa-comment-alt"></i></label>
 							<textarea class="form-control" name="description" id="description" cols="5" rows="5s"></textarea>
 						</div>
 					</div>
@@ -85,13 +85,13 @@
 				<div class="row">
 					<div class="col">
 						<div class="form-group">
-							<label class="form-label" for="status">Estado</label>
+							<label class="form-label" for="status">Estado <i class="far fa-check-circle"></i></label>
 							<input class="form-control" type="text" name="status" id="status" readonly value="Abierto">
 						</div>
 					</div>
 					<div class="col">
 						<div class="form-group">
-							<label class="form-label" for="ticketType">Tipo de ticket</label>
+							<label class="form-label" for="ticketType">Tipo de ticket <i class="fas fa-ticket-alt"></i></label>
 							<select class="form-select" name="ticketType" id="ticketType">
 								<option value=""></option>
 								<option value="Consulta">Consulta</option>
@@ -103,7 +103,7 @@
 					</div>
 					<div class="col">
 						<div class="form-group">
-							<label class="form-label" for="channel">Canal de comunicación</label>
+							<label class="form-label" for="channel">Canal de comunicación <i class="fas fa-satellite-dish"></i></label>
 							<select class="form-select" name="channel" id="channel">
 								<option value=""></option>
 								<option value="Email">Email</option>
