--- a/tickets/templates/generate_ticket_form.html
+++ b/tickets/templates/generate_ticket_form.html
@@ -28,13 +28,13 @@
 			<div class="row">
 				<div class="col col col-sm-4 ">
 					<div class="form-group">
-							<label class="form-label" for="subject"> Asunto <i class="fas fa-file-signature"></i></label>
+							<label class="form-label" for="subject"> Asunto </label>
 							<input class="form-control g-3" type="text" id="subject" name="subject" required placeholder="Asunto">
 					</div>
 				</div>
 				<div class="col col col-sm-4 ">
 					<div class="form-group">
-						<label class="form-label" for="customer"> Nombre del cliente <i class="fas fa-users"></i></label>
+						<label class="form-label" for="customer"> Nombre del cliente </label>
 						<select class="form-select" name="customer" id="customer">
 							<option value=""></option>
 							{% for customer in customers %}
@@ -45,7 +45,7 @@
 				</div>
 				<div class="col col-sm-4 mb-5">
 					<div class="form-group">
-						<label class="form-label" for="asigned"> Asignar a <i class="far fa-building"></i></label>
+						<label class="form-label" for="asigned"> Asignar a </label>
 						<select class="form-select" name="asigned" id="asigned">
 							<option value=""></option>
 							<option value="Departamento de sistemas">Departamento de sistemas</option>
@@ -64,7 +64,7 @@
 					</div>
 					<div class="col">
 						<div class="form-group">
-							<label class="form-label" for="priority">Prioridad <i class="fas fa-exclamation-triangle"></i></label>
+							<label class="form-label" for="priority">Prioridad </label>
 							<select class="form-select" name="priority" id="priority">
 								<option value=""></option>
 								<option value="Alta">Alta</option>
@@ -77,7 +77,7 @@
 				<div class="row py-5">
 					<div class="col">
 						<div class="form-group">
-							<label class="form-label" for="description">Descripción <i class="far fa-comment-alt"></i></label>
+							<label class="form-label" for="description">Descripción </label>
 							<textarea class="form-control" name="description" id="description" cols="5" rows="5s"></textarea>
 						</div>
 					</div>
@@ -103,7 +103,7 @@
 					</div>
 					<div class="col">
 						<div class="form-group">
-							<label class="form-label" for="channel">Canal de comunicación <i class="fas fa-satellite-dish"></i></label>
+							<label class="form-label" for="channel">Canal de comunicación </label>
 							<select class="form-select" name="channel" id="channel">
 								<option value=""></option>
 								<option value="Email">Email</option>
