se agrego la funcion para generar un pedido a un cliente

--- a/menu/templates/dashboard.html
+++ b/menu/templates/dashboard.html
@@ -86,7 +86,7 @@
                                     <a href="{% url 'products' %}" class="nav-link px-0"> <span class="d-none d-sm-inline"><i class="fas fa-box-open"></i> Productos</span></a>
                                 </li>
 																<li>
-																	<a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline"><i class="fas fa-boxes"></i> Gestionar productos</span></a>
+																	<a href="{% url 'orders' %}" class="nav-link px-0"> <span class="d-none d-sm-inline"><i class="fas fa-boxes"></i> Pedidos</span></a>
 															</li>
                             </ul>
                         </li>
