--- a/inventory/templates/orders.html
+++ b/inventory/templates/orders.html
@@ -185,7 +185,7 @@
 													<i class="fas fa-bars justify-content-center"></i>
 												</a>
 												<ul class="dropdown-menu dropdown-menu-right" aria-labelledby="Dropdown-menu">
-													<li><a class="dropdown-item" href="" data-bs-toggle="modal" data-bs-target="#addOrder{{ product.id }}"><i class="fas fa-print"></i> Generar reporte</a></li>
+													<li><a class="dropdown-item" href="{% url 'generate_report' order.id %}"><i class="fas fa-print"></i> Generar reporte</a></li>
 													<li><a class="dropdown-item" href="" data-bs-toggle="modal" data-bs-target="#updateOrder{{ product.id }}"><i class="far fa-edit"></i> Actualizar pedido</a></li>
 													<li><a class="dropdown-item" href="" data-bs-toggle="modal" data-bs-target="#deleteOrder{{ order.id }}"><i class="fas fa-trash-alt"></i> Eliminar pedido</a></li>
 												</ul>
