se cambio la ruta del formulario de cambio de contraseña

--- a/inventory/templates/products.html
+++ b/inventory/templates/products.html
@@ -17,7 +17,7 @@
 			<h3 class="lead text-center">Gestiona las categorias de los productos <i class="fas fa-tags"></i></h3>
 			{% if messages %}
 				{% for message in messages %}
-						<div class="alert alert-success mt-5">
+						<div class="alert alert-success mt-5 alert-dismissible fade show" role="alert" style="width: 350px;">
 							{{message}} <a class="text-decoration-none" href="">Click para ver.</a>
 						</div>
 				{% endfor %}
