--- a/authentication/templates/change_password.html
+++ b/authentication/templates/change_password.html
@@ -1,31 +1,65 @@
-{% extends "base.html" %}
+{% extends "dashboard.html" %}
 
 {% load static %}
 
-{% block title%}Reestablecer contraseña{% endblock %}
+{% block title%}Configuración{% endblock %}
 
 {% block extra_styles %}
-    <link rel="stylesheet" href="{% static 'styles/reset_password.css'%}">
+   
 {% endblock %}
 
 
 {% block content%}
-<div class="container py-5">
-    <form action="{% url 'change_password' %}">
-        <div class="form-group">
-            <label for="old_passwpor"> Anntigua contraseña</label>
-            {{ form.old_password }}
-        </div>
-        <div class="form-group">
-            <label class="form-label" for="new_password1"> Nueva contraseña</label>
-            {{ form.new_password1 }}
-        </div>
-        <div class="form-group">
-            <label for="new_password2"> Confirmar contraseña</label>
-            {{ form.new_password2 }}
-        </div>
-        <button class="btn btn-primary btn-outline"> Cambiar contraseña</button>
-    </form>
-</div>
+
+		<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+			<ul class="breadcrumb">
+				<li class="breadcrumb-item"><a class="text-decoration-none link-primary" href="{% url 'dashboard' %}">Menú</a></li>
+				<li class="breadcrumb-item active" aria-current="page"><a href="{% url 'change_password' %}"><span class="badge bg-secondary rounded-pill">Configuración de la cuenta</span></a></li>
+			</ul>
+		</nav>
+		<h3 class="lead pt-5">Información de la cuenta de usuario <i class="far fa-user-circle"></i></h3>
+
+		<div class="container py-4">
+			<div class="row">
+				<div class="col mb-2">
+					 <img src="{% static 'images/user_profile.jpg' %}" alt="user_profile.jpg" width="210px">
+					 <h3>{{request.user}}</h3>
+				</div>
+				 <div class="col mb-2">
+						<h3 class="lead mt-5">Correo - {{user.email}}</h3>
+						<h3 class="lead">Celular - 324-123-123</h3>
+						<h3 class="lead">Idioma - <b>ES</b></h3>
+						<h3 class="lead">Ultimo login - {{user.last_login}}</h3>
+						<h3 class="lead">Se se unió el - {{user.date_joined}}</h3>
+				 </div>
+	 		</div>
+		</div>
+		<hr>
+		<h3 class="lead mt-5">Cambiar contraseña <i class="fas fa-unlock-alt"></i></h3>
+
+		{% if messages %}
+				{% for message in messages %}
+						<div class="alert alert-success alert-dismissible fade show" role="alert" style="width: 350px;">
+							{{message}}
+						</div>
+				{% endfor %}
+		{% endif %}
+
+		<div class="container py-5">
+				<form action="{% url 'change_password' %}" method="POST">
+					{% csrf_token %}
+					<div class="form-group">
+						<div class="col-xs-4">
+							<label class="form-label" for="new_password1">Contraseña nueva</label>
+							{{form.new_password1}}
+						</div>
+					</div>
+					<div class="form-group">
+						<label class="form-label" for="new_password2">Confirme su contraseña</label>
+						{{form.new_password2}}
+					</div>
+					<button class="btn btn-success mt-4" type="submit">Cambiar contraseña</button>
+				</form>
+		</div>
 
 {% endblock %}
