--- a/contacts/templates/contacts.html
+++ b/contacts/templates/contacts.html
@@ -3,6 +3,14 @@
 <title>{% block title %}Clientes{% endblock %}</title>
 
 {% block content %}
+
+		<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+			<ul class="breadcrumb">
+				<li class="breadcrumb-item"><a class="text-decoration-none link-primary" href="{% url 'dashboard' %}">Menú</a></li>
+				<li class="breadcrumb-item active" aria-current="page"><a href="{% url 'contacts' %}"><span class="badge bg-secondary rounded-pill">Gestionar clientes</span></a></li>
+			</ul>
+		</nav>
+
     <h3 class="text-center lead">Gestionar clientes y campañas de marketing <i class="fas fa-users"></i></h3>
     {% if messages %}
         {% for message in messages %}
