--- a/inventory/templates/orders.html
+++ b/inventory/templates/orders.html
@@ -18,7 +18,7 @@
 		
 		{% if messages %}
 				{% for message in messages %}
-						<div class="alert alert-success">
+						<div class="alert alert-success alert-dismissible fade show" role="alert" style="width: 350px;">
 							{{message}}
 						</div>
 				{% endfor %}
