--- a/inventory/templates/store.html
+++ b/inventory/templates/store.html
@@ -18,7 +18,7 @@
 
 		{% if messages %}
 		{% for message in messages %}
-			<div class="alert alert-success mt-4">
+			<div class="alert alert-success mt-4 alert-dismissible fade show" role="alert" style="width: 350px;">
 				{{message}}
 			</div>
 		{% endfor %}
