se cambio el estilo de los alerts en varias apps

--- a/authentication/templates/change_password.html
+++ b/authentication/templates/change_password.html
@@ -39,7 +39,8 @@
 
 		{% if messages %}
 				{% for message in messages %}
-						<div class="alert alert-success alert-dismissible fade show" role="alert" style="width: 350px;">
+						<div class="alert alert-success alert-dismissible fade show text-center" role="alert" style="width: 350px;">
+							<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 							{{message}}
 						</div>
 				{% endfor %}
