--- a/inventory/templates/store.html
+++ b/inventory/templates/store.html
@@ -18,7 +18,8 @@
 
 		{% if messages %}
 		{% for message in messages %}
-			<div class="alert alert-success mt-4 alert-dismissible fade show" role="alert" style="width: 350px;">
+			<div class="alert alert-success mt-4 alert-dismissible fade show text-center" role="alert" style="width: 350px;">
+				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 				{{message}}
 			</div>
 		{% endfor %}
@@ -67,7 +68,11 @@
 				{% for store in stores %}
 					<tr>
 						<td>{{store.name}}</td>
-						<td>{{store.status}}</td>
+						{% if store.status == "Activo" %}
+								<td><span class="badge bg-success rounded-pill">{{store.status}}</span></td>
+							{% else %}
+								<td><span class="badge bg-danger rounded-pill">{{store.status}}</span></td>
+						{% endif %}
 						<div class="modal fade" id="deleteStore{{ store.id }}" tabindex="-1" role="dialog" aria-labelledby="deleteStore" aria-hidden="true">
 							<div class="modal-dialog">
 									<div class="modal-content">
