--- a/authentication/static/styles/register.css
+++ b/authentication/static/styles/register.css
@@ -5,9 +5,8 @@
 
 
 body {
-    background: #F0F2F0; 
-    background: -webkit-linear-gradient(to right, #000C40, #F0F2F0);  
-    background: linear-gradient(to right, #000C40, #F0F2F0); 
+    
+    background-color: #f9fcff;
     
 }
 
