--- a/inventory/templates/category.html
+++ b/inventory/templates/category.html
@@ -18,7 +18,8 @@
 
 			{% if messages %}
 			{% for message in messages %}
-				<div class="alert alert-success mt-4 alert-dismissible fade show" role="alert" style="width: 350px;">
+				<div class="alert alert-success mt-4 alert-dismissible fade show text-center" role="alert" style="width: 300px;">
+					<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 					{{message}}
 				</div>
 			{% endfor %}
@@ -67,7 +68,11 @@
 					{% for category in categories %}
 						<tr>
 							<td>{{category.name}}</td>
-							<td>{{category.status}}</td>
+							{% if category.status == "Activo" %}
+									<td><span class="badge bg-success rounded-pill">{{category.status}}</span></td>
+								{% else %}
+									<td><span class="badge bg-danger rounded-pill">{{category.status}}</span></td>
+							{% endif %}
 							<div class="modal fade" id="deleteCategory{{ category.id }}" tabindex="-1" role="dialog" aria-labelledby="deleteCategory" aria-hidden="true">
 								<div class="modal-dialog">
 										<div class="modal-content">
