--- a/tickets/templates/generate_ticket_form.html
+++ b/tickets/templates/generate_ticket_form.html
@@ -17,7 +17,8 @@
     <h3 class="mb-5 text-center lead dispay-5">Formulario de creación de tickets <i class="fas fa-ticket-alt"></i></h3>
 		{% if messages %}
 			{% for message in messages %}
-					<div class="alert alert-success mt-3 alert-dismissible fade show" role="alert" style="width: 350px;">
+					<div class="alert alert-success mt-4 alert-dismissible fade show text-center" role="alert" style="width: 350px;">
+						<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 						{{message}} <a class="text-decoration-none" href="{% url 'tickets' %}">Clic para ver.</a>
 					</div>
 			{% endfor %}
